# industrial-ams

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  Dockerfile  Dockerfile_ubuntu  LICENSE  Makefile  README.md  README.rst  TODO  build.sh  certificates.sh  compose-test.yaml  docker-compose.test.yaml  docker-compose.yaml  docker-test.yaml  grpc_testclient.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py  tasks.py  update_proto.sh
.github/workflows/: dockerhub.yml  main.yml  pylint.yml  pypi.yml  release.yml  static.yml  tests.yml
benchmark/: README.rst
benchmark/pagani2017/: analysis.py  run.yaml  simulation.py
docs/: about.rst  conf.py  development.rst  index.rst  installation.rst
docs/interfaces/: agent.rst  framework.rst  index.rst  simulation.rst
docs/mixins/: event.rst  index.rst  influxdb.rst  mqtt.rst  opcua.rst  tcp.rst
docs/plugins/: envoy.rst  fluentd.rst  index.rst  influxdb.rst  own_plugin.rst  sentry.rst
docs/tutorial/: index.rst  simple_agent.rst  simulation.rst
examples/: Dockerfile
examples/agv/: Dockerfile_sink  Dockerfile_source  Dockerfile_vehicle  agv.proto  agv_pb2.py  agv_pb2_grpc.py  build.sh  run_sink.py  run_source.py  run_vehicle.py  simulation.yaml  sink.py  source.py  vehicle.py
iams/: __init__.py  agent.py  ca.py  cfssl.py  client.py  constants.py  df.py  exceptions.py  framework.py  helper.py  interface.py  market.py  outliner.py  recipe.py  runsimulation.py  runtime.py  scheduler.py  server.py  servicer.py  simulation.py  stop.py  stub.py  tests.py  utils.py
proto/: agent.proto  ca.proto  df.proto  framework.proto  market.proto  simulation.proto
publication/: README.rst
requirements/: build.txt  dev.txt  doc.txt  docs.txt  test.txt
secrets_test/: ca.crt  ca.key
(+143 files in other folders)
