[metadata]
name = iams
version = attr: iams.__version__
url = https://github.com/glomium/industrial-ams
author = Sebastian Braun
author_email = sebastian.braun@fh-aachen.de
description = An industial agent management system aiming to control agents for manufacturing units.
long_description = file: README.md
long_description_content_type = text/markdown
license = MPL2.0
license-file = LICENSE
install_requires = 
    PyYAML
    cryptography
    docker
    googleapis-common-protos
    grpcio
    python-arango
    requests
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Intended Audience :: Manufacturing
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Documentation = https://github.com/glomium/industrial-ams
    Source = https://github.com/glomium/industrial-ams
    Tracker = https://github.com/glomium/industrial-ams

[options]
python_requires = >=3.7
packages =
    iams
    iams.aio
    iams.interfaces
    iams.plugins.arango
    iams.plugins.envoy
    iams.plugins.fluentd
    iams.plugins.influxdb
    iams.plugins.mqtt
    iams.plugins.sentry
    iams.proto
    iams.utils
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    iams-server = iams.server:execute_command_line
    iams-simulation = iams.simulation:execute_command_line

[flake8]
accept-encodings = utf-8
exclude = 
    iams/proto
ignore = T000
max-line-length = 119

[bdist_wheel]
universal = 0
